# warmmy

./: .gitignore  Cargo.toml
crates/adapters/: Cargo.toml
crates/adapters/src/: error.rs  lib.rs  prelude.rs
crates/adapters/src/agent/: builder.rs  config.rs  guardrail.rs  hook.rs  interaction.rs  knowledge.rs  mod.rs  prompt.rs  retrieval.rs  service.rs  tool.rs
crates/adapters/src/agent/collaboration/: hitl.rs  mod.rs
crates/adapters/src/agent/guardrails/: mod.rs  rule_based.rs
crates/adapters/src/agent/memory/: local.rs  mod.rs  short_term.rs
crates/adapters/src/agent/memory/long_term/: extractor.rs  facts.rs  mod.rs  rag.rs
crates/adapters/src/agent/model_routing/: heuristic.rs
crates/adapters/src/agent/planning/: template.rs
crates/adapters/src/agent/provider/: openai.rs
crates/adapters/src/agent/runtime/: adapter.rs  hook.rs  mod.rs  openai_compatible.rs  rig.rs
crates/adapters/src/agent/tool/: meal.rs  mod.rs
crates/adapters/src/agent/tool_execution/: builtin.rs
crates/adapters/src/agent/tools/: meal_log.rs  mod.rs
crates/adapters/src/crypto/: argon2.rs  mod.rs
crates/adapters/src/meal/llm/: openai.rs
crates/adapters/src/meal/memory/: qdrant.rs
crates/adapters/src/persistence/: app_error_impl.rs  ephemeral_image_store.rs  mod.rs
crates/adapters/src/persistence/psql/: advice_repo.rs  db.rs  meal_repo.rs  mod.rs  models.rs  nutrition_repo.rs  runtime.rs  user_repo.rs
crates/adapters/src/persistence/sqlite/: advice_repo.rs  chat_message_repo.rs  db.rs  meal_repo.rs  mod.rs  models.rs  nutrition_repo.rs  runtime.rs  user_repo.rs
crates/adapters/src/persistence/sqlite/models/: conversation.rs  meal.rs  mod.rs  user.rs
crates/adapters/src/persistence/sqlite/repos/: conversation_repo.rs  meal_repo.rs  mod.rs  user_repo.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  prelude.rs
crates/app/src/advice/: mod.rs  port.rs
crates/app/src/advice/impls/: prompt.rs
crates/app/src/common/: mod.rs
crates/app/src/conversation/: command.rs  event_handler.rs  mod.rs  port.rs  query.rs
crates/app/src/meal/: command.rs  event_handler.rs  mod.rs  port.rs  query.rs
crates/app/src/meal/impls/: estimator.rs  mod.rs  perception.rs
crates/app/src/nutrition/impls/: estimator.rs
crates/app/src/user/: command.rs  mod.rs  port.rs  query.rs
crates/application/: Cargo.toml
crates/application/src/: app_error.rs  lib.rs  prelude.rs
crates/application/src/advice/: port.rs
crates/application/src/common/: mod.rs  pagination.rs
crates/application/src/meal/: command.rs  mod.rs  port.rs  query.rs
crates/application/src/user/: mod.rs  port.rs  query.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs
crates/domain/src/advice/: entity.rs  event.rs  value_object.rs
crates/domain/src/meal/: entity.rs  event.rs  mod.rs  value_object.rs
crates/domain/src/nutrition/: entity.rs  event.rs  mod.rs  (+1 more)
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs  setup.rs
crates/ui/: Cargo.toml  Dioxus.toml
(+9 files in other folders)
