[package]
name = "adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
app = { path = "../app" }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
toasty = { version = "0.5.0", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
rig = { version = "0.37.0", default-features = false, features = ["lancedb", "rustls"] }
lancedb = { version = "0.23", default-features = false }
arrow-array = "56.2.1"
