[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures-core = "0.3"
chrono = { version = "0.4", features = ["serde"] }
